--- a/小米.html
+++ b/小米.html
@@ -158,7 +158,7 @@
 
             // 3. 加载模型
             const gltfLoader = new THREE.GLTFLoader();
-            gltfLoader.load('hjm.glb', (gltf) => {
+            gltfLoader.load('https://zjfsit.oss-cn-guangzhou.aliyuncs.com/model.glb', (gltf) => {
                 const model = gltf.scene;
                 scene.add(model);
 
